<resources>
    <string name="app_name">L\'Etudiant</string>
    <string name="libelle">Libelle</string>
    <string name="prixProd">Prix Unitaire</string>
    <string name="adrVendeur">Adresse du vendeur</string>
    <string name="userName">Votre nom</string>
    <string name="titleFonct">Titre</string>
    <string name="connex">Connexion</string>
    <string name="inscript">INSCRIPTION</string>
    <string name="userPrenom">Votre prenom</string>
    <string name="userTelephone">Téléphone</string>
    <string name="userChambre">Votre chambre</string>
    <string name="userEmail">Email</string>
    <string name="userPwd">Mot de passe</string>
    <string name="userAdress">Votre domicile</string>
    <string name="userDepart">Departement :</string>
    <string name="titreSpinnerCateg">Catég. socio-professionnel :</string>
    <string-array name="categorie">
        <item>Document</item>
        <item>Fournitures</item>
        <item>Ticket</item>
        <item>High-Tech</item>
        <item>Téléphone</item>
        <item>Santé et beauté</item>
        <item>Electronique</item>
        <item>Alimentation</item>
        <item>Fashion</item>
        <item>Autres</item>

    </string-array>
    <string name="continer">Continuer</string>
    <string name="Acceuil">Acceuil</string>
    <string name="vendre">Vendre</string>
    <string name="Compte">Compte</string>
    <string name="CapiConnex">AUTHENTIFICATION</string>
    <string name="email">Votre email *</string>
    <string name="Publier">VENDRE UN BIEN</string>
    <string name="prixProduit">Prix unitaire: </string>
    <string name="garantie">Garantie</string>
    <string name="nombre">Nombre</string>
    <string name="description">Description</string>
    <string name="newAddressVente">Adresse de vende</string>
    <string name="normal">Normale</string>
    <string name="flash">Flash</string>
    <string name="libelleProduit">Libelle</string>
    <string name="bienvenue">BIENVENUE</string>
    <string name="logo">Umarket</string>
    <string name="titre">Titre</string>
    <string name="message">Message</string>
    <string name="ajouterPanier">Ajouter au panier</string>
    <string name="voirDetails">Voir les details</string>
    <string name="gmail">Gmail</string>
    <string name="yahoo">Yahoo</string>
    <string name="valider">Validez votre compte</string>
    <string name="titreDetailBien">Détails du produit</string>
    <string name="detailsCategie">Catégorie :</string>
    <string name="detailsLibelle">Libellé :</string>
    <string name="detailsPrix">Prix Unitaire</string>
    <string name="detailsGarantie">Garantie :</string>
    <string name="detailsNombre">Nombre disponible :</string>
    <string name="detailsDescript">Description :</string>
    <string name="titreInfoVendeur">VENDEUR</string>
    <string name="adresseVendeur">Adresse</string>
    <string name="appeler">Appeler</string>
    <string name="whatsApp">WhatsApp</string>
    <string name="titreSameCategorie">Même catégorie</string>
    <string name="achat">Acheter</string>
    <string name="Calculsomme">Somme totale</string>
    <string name="moins">-</string>
    <string name="plus">+</string>
    <string name="acheter">Acheter</string>
    <string name="pwdForget">Mot de passe oublié ?</string>
    <string name="quantite">Quantité: </string>
    <string name="Punitaire">Prix</string>
    <string name="unitaire">1000fr</string>
    <string name="expiration">Expiration</string>
    <string name="like">20</string>
    <string name="sousTolal">Total :</string>
    <string name="vide_triste">Votre panier est vide!</string>
    <string name="findInspi">Trouver des idées</string>
    <string name="artVendu">article vendu</string>
    <string name="zero">0</string>
    <string name="artAchete">article acheté</string>
    <string name="qt">1</string>
    <string name="sommeTotale">30000fr</string>
    <string name="livraison">Avec livraison</string>
    <string name="adrLiv">Adresse de livraison avec détails</string>
    <string name="artLike">article aimé</string>
    <string name="livDirect">Directe</string>
    <string name="livRelai">Relais</string>
    <string name="paiement">Mode de paiement</string>
    <string name="modeOp">Orange money</string>
    <string name="modeAP">Payé à l\'arrivée</string>
    <string name="step2">Deuxième étape: LIVRAISON</string>
    <string name="step3">Troisième étape: PAIEMENT</string>
    <string name="fin">Finaliser</string>
    <string name="sansLiv">Sans livraison</string>
    <string name="titreListeUser" />
    <string name="step4">Quatrième étape: FACTURATION</string>
    <string name="sansFacture">Sans facture</string>
    <string name="avecFacture">Avec facture</string>
    <string name="titreAchat">Processus d\'achat</string>
    <string name="livDispo">Livraison disponible</string>
    <string name="negociation">Négocier le prix et prendre rendez vous</string>
    <string name="prixAchat">Prix d\'achat: </string>
    <string name="prixAchat2">Donnez le prix d\'achat du bien</string>
    <string name="livIndispo">Livraison Indisponible</string>
    <string name="sousTitreAchat">Compte rendu</string>
    <string name="sousTolal2">TOTAL</string>
    <string name="designation">Désignation</string>
    <string name="service">Servides</string>
    <string name="tel">+221781401217</string>
    <string name="adresse">Bambilor/Comico5</string>
    <string name="emailL">exemple@gmail.com</string>
    <string name="Mservice">Multi-service</string>
    <string name="enseignant">Enseignant</string>
    <string name="step0">Première étape: JOUR DE RENDEZ-VOUS</string>
    <string name="mesVentes">Achats et ventes</string>
    <string name="mesVentesEnCours">Ventes en cours</string>
    <string name="mesVentesAcheves">Ventes achevées</string>
    <string name="dateVente">Date de vente: </string>
    <string name="dateRv">RV:</string>
    <string name="estLivré">Livraison:</string>
    <string name="mesAchaat">Biens Achetés</string>
    <string name="mesAchatsEnCours">Achats en cours</string>
    <string name="mesAchatsAcheves">Achats achevés</string>
    <string name="passer">passer</string>
    <string name="facture">Facture</string>
    <string name="numFacture">N° 0000001</string>
    <string name="dateFacture">Date: achat</string>
    <string name="titreNomVendeur">Vendeur:  </string>
    <string name="titreNomAcheteur">Facturé à:  </string>
    <string name="nomAcheteur">nomAcheteur</string>
    <string name="nomVendeur">nomVendeur</string>
    <string name="numVendeur">numVendeur</string>
    <string name="titreNumVendeur">Téléphone:</string>
    <string name="qtFacture">Qt.</string>
    <string name="designationFacture">Désignation</string>
    <string name="prixFacture">P.U.</string>
    <string name="totalFacture">Total</string>
    <string name="qtFactureEx">qtFact</string>
    <string name="designationFactureEx">designation</string>
    <string name="prixFactureEx">prixUnit</string>
    <string name="totalFactureEx">TotalFact</string>
    <string name="livVendeur">Vendeur</string>
    <string name="livLivreur">Autre livreur</string>
    <string name="umarket">Umarket</string>
    <string name="uservice">Uservice</string>
    <string name="uinfo">Uinfo</string>
    <string name="umaps">Umaps</string>
    <string name="ucollaborate">UCAD</string>
    <string name="direction">Itinéraire</string>
    <string name="user_name">Prenom Nom</string>
    <string name="user_profession">Profession</string>
    <string name="numeroTel">780000000</string>
    <string name="infographie">Infographie</string>
    <string name="etuProf">Cours particuliers</string>
    <string name="traiteTexte">Traitement de texte</string>
    <string name="inscriptOnLine">Inscription en ligne</string>
    <string name="photoMin">Photo minutes</string>
    <string name="maint">Maintenance</string>
    <string name="coiffure">Coiffure</string>
    <string name="liv">Livreur</string>
    <string name="hintSearchBien">Que cherchez vous?</string>
    <string-array name="categorieSocioEconomique">
        <item>Infographie</item>
        <item>Cours en ligne</item>
        <item>Traitement de texte</item>
        <item>Inscription en ligne</item>
        <item>Photo minutes</item>
        <item>Maintenance</item>
        <item>Coiffure</item>
        <item>Livreur</item>
        <item>Autres</item>
    </string-array>
    <string-array name="facultes">
        <item>Faculté des Sciences et Techniques (FST)</item>
        <item>Faculté des Sciences juridiques et politiques (FSJP)</item>
        <item>Faculté de Médecine, de Pharmacie et d’Odontologie (FMPO)</item>
        <item>Faculté des Lettres et Sciences humaines (FLSH)</item>
        <item>Faculté des Sciences économiques et de Gestion (FASEG)</item>
        <item>Faculté des Sciences et Technologies de l’Éducation et de la Formation (FASTEF)</item>
    </string-array>
    <string name="api_key" translatable="false">
        AIzaSyDQFAO9ixrppAs9FU3-uhF0BQFOT8Bk43Y
    </string>
    <string name="addLieu">Ajouter un lieu</string>
    <string name="recherche">Quel lieu cherchez vous?</string>
    <string name="userSpace">Mon espace</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textComptePro">Avec ce compte c\'est sûr que vous aurez plus de visibilité et augmanter ainsi votre productivité.</string>
    <string name="selectOneItem">Laissez vous guidez</string>
    <string name="monEmplacement">Nommez votre emplacement</string>
    <string name="userFac">Faculté</string>
    <string name="nomLieu">Nom du lieu</string>
    <string name="hintNomLieu">Donnez le nom du lieu</string>
    <string name="deatilsLieu">Description</string>
    <string name="hintDescLieu">Donnez plus de détails</string>
    <string name="ajouterLieu">Valider</string>
    <string name="titleHisto">Historiques</string>
    <string name="heureHisto">date</string>
    <string name="supAll">Supprimer tout</string>
    <string name="zeroHisto">Aucun historique</string>
    <string name="evaluer">Evaluer</string>
    <string name="tard">Ne plus afficher</string>
    <string name="nci">Votre Numéro de carte d\'identité</string>
    <string name="titreComptePro">Compte professionnel</string>
    <string name="document">Documents</string>
    <string name="fourniture">Fournitures</string>
    <string name="ticket">Tickets restaut</string>
    <string name="highTech">High-tech</string>
    <string name="mode">Fashion</string>
    <string name="aliment">Alimentations</string>
    <string name="santeEtBeaute">Santé et beauté</string>
    <string name="elect">Eléctronique</string>
    <string name="smartPhone">Téléphone</string>
    <string name="enregistrer">Enregister</string>
    <string name="non">Non</string>
    <string name="oui">Oui</string>
    <string name="docUmarket">Documentation Umarket</string>
    <string name="docs">Documentations</string>
    <string name="docUservice">Documentation Uservice</string>
    <string name="docUmaps">Documentation Umaps</string>
    <string name="apropos">A propos</string>
    <string name="versionApp">Version 1.0</string>
    <string name="moi">Babacar Ndong</string>
    <string name="uinfo_titre">Actualité</string>
    <string name="uinfo_auteur">Auteur</string>
    <string name="titrePanier">PANIER</string>
    <string name="alaUne">Information à la une</string>
    <string name="alaUneDescript">Description description description description description description description description description description descriptiondescription.</string>
    <string name="uinfo_details">Détails</string>
    <string name="datePub">date de publication</string>
    <string name="yourComment">Ajouter un commentaire</string>
    <string name="PublierComment">Publier</string>
</resources>