<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="wrap_content">


    <!-- Titre -->
    <TextView
        android:id="@+id/umaps_ajouter_emplace_titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titre"
        android:textStyle="bold"
        android:textSize="@dimen/texteSize25"
        android:textColor="@android:color/black"
        android:layout_marginLeft="@dimen/margin10"
        android:layout_marginTop="@dimen/margin10"

        />

    <!-- Sous-titre -->
    <TextView
        android:id="@+id/umaps_ajouter_emplace_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin10"
        android:text="@string/sousTitreAchat"
        android:textSize="@dimen/texteSize20"
        android:textStyle="normal"
        android:textColor="@android:color/black"
        />

    <!-- Zone de texte -->
    <EditText
        android:id="@+id/umaps_ajouter_emplace_nomEmplace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="normal"
        android:textSize="@dimen/textSize17"
        android:textColorHint="@color/appColor"
        android:textColor="@color/darkAppColor"
        android:fontFamily="@font/philosopherregular"
        android:hint="@string/monEmplacement"
        android:layout_margin="@dimen/margin10"
        android:layout_gravity="center"
        />

    <!-- Boutons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin10"
        android:weightSum="100"
        >

        <!-- Non -->
        <Button
            android:id="@+id/umaps_ajouter_emplace_btnNon"
            android:layout_width="0dp"
            android:layout_weight="45"
            android:layout_height="wrap_content"
            android:text="@string/non"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="@dimen/textSize17"
            android:fontFamily="@font/philosopherregular"
            android:background="@drawable/style_btn_evaluer"/>

        <!-- Séparateur -->
        <View
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="@dimen/widthSize15"
            />

        <!-- Oui -->
        <Button
            android:id="@+id/umaps_ajouter_emplace_btnOui"
            android:layout_width="0dp"
            android:layout_weight="45"
            android:layout_height="wrap_content"
            android:text="@string/oui"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="@dimen/textSize17"
            android:fontFamily="@font/philosopherregular"
            android:background="@drawable/style_btns"/>

    </LinearLayout>




</LinearLayout>